学习记录更新

--- a/01-Python语言基础/学习记录.md
+++ b/01-Python语言基础/学习记录.md
@@ -1,5 +1,5 @@
 ## Day01 - 初识Python
-**完成时间2021-09-05**
+- [ ] **完成时间 2021-09-05**
 * Python简介 - Python的历史 / Python的优缺点 / Python的应用领域
 * 搭建编程环境 - Windows环境 / Linux环境 / MacOS环境
 * 从终端运行Python程序 - Hello, world / print函数 / 运行程序
@@ -7,6 +7,7 @@
 * 注释 - 注释的作用 / 单行注释 / 多行注释
 
 ## Day02 - 语言元素
+- [ ] ****完成时间 2021-09-05****
 * 程序和进制 - 指令和程序 / 冯诺依曼机 / 二进制和十进制 / 八进制和十六进制
 * 变量和类型 - 变量的命名 / 变量的使用 / input函数 / 检查变量类型 / 类型转换
 * 数字和字符串 - 整数 / 浮点数 / 复数 / 字符串 / 字符串基本操作 / 字符编码
