--- a/01-Python语言基础/在线运行版本/练习版本.ipynb
+++ b/01-Python语言基础/在线运行版本/练习版本.ipynb
@@ -304,6 +304,122 @@
     "is_leap = year % 4 == 0 and year % 100 != 0 or year % 400 ==0\n",
     "print(is_leap)"
    ]
+  },
+  {
+   "source": [
+    "## 分支结构"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### 练习1"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "8.000000厘米 = 3.149606英寸\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 英制单位英寸和公职单位厘米互换\n",
+    "\n",
+    "value = float(input(\"请输入长度 ：\"))\n",
+    "unit = input('请输入单位： ')\n",
+    "\n",
+    "if unit == 'in' or unit == '英寸':\n",
+    "    print('%f英寸 = %f厘米' % (value,value * 2.54))\n",
+    "elif unit == 'cm' or unit == '厘米' :\n",
+    "    print('%f厘米 = %f英寸' % (value,value / 2.54))\n",
+    "else:\n",
+    "    print(\"请输入有效单位\")\n"
+   ]
+  },
+  {
+   "source": [
+    "### 练习2"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "对应的等级是 ：  B\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 百分制分等级\n",
+    "\n",
+    "score = float(input(\"请输入您的成绩： \"))\n",
+    "\n",
+    "if score >= 90 :\n",
+    "    grade = \"A\"\n",
+    "elif score >=80 :\n",
+    "    grade = \"B\"\n",
+    "elif score >= 70 :\n",
+    "    grade = \"C\"\n",
+    "elif score >= 60:\n",
+    "    grade = \"D\"\n",
+    "else:\n",
+    "    grade = \"E\"\n",
+    "print(\"对应的等级是 ： \",grade)"
+   ]
+  },
+  {
+   "source": [
+    "### 练习3 "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "不能构成三角形\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 判断输入的边长能否构成三角形，如果能则计算出三角形的周长和面积\n",
+    "\n",
+    "a = float(input('a = '))\n",
+    "b = float(input('b = '))\n",
+    "c = float(input('c = '))\n",
+    "if a + b > c and a + c > b and b + c > a:\n",
+    "    print('周长: %f' % (a + b + c))\n",
+    "    p = (a + b + c) / 2\n",
+    "    area = (p * (p - a) * (p - b) * (p - c)) ** 0.5\n",
+    "    print('面积: %f' % (area))\n",
+    "else:\n",
+    "    print('不能构成三角形')\n",
+    "\n",
+    "# 说明： 上面使用的通过边长计算三角形面积的公式叫做海伦公式。"
+   ]
   }
  ]
 }
