--- a/01-Python语言基础/在线运行版本/练习版本.ipynb
+++ b/01-Python语言基础/在线运行版本/练习版本.ipynb
@@ -420,6 +420,96 @@
     "\n",
     "# 说明： 上面使用的通过边长计算三角形面积的公式叫做海伦公式。"
    ]
+  },
+  {
+   "source": [
+    "## 04 循环结构"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5050\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 用for循环实现1~100求和\n",
+    "\n",
+    "sum = 0\n",
+    "for x in range(101):\n",
+    "    sum += x\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "source": [
+    "### range的用法非常灵活\n",
+    "\n",
+    "* range(101)：可以用来产生0到100范围的整数，需要注意的是取不到101。\n",
+    "* range(1, 101)：可以用来产生1到100范围的整数，相当于前面是闭区间后面是开区间。\n",
+    "* range(1, 101, 2)：可以用来产生1到100的奇数，其中2是步长，即每次数值递增的值。\n",
+    "* range(100, 0, -2)：可以用来产生100到1的偶数，其中-2是步长，即每次数字递减的值。"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### while循环\n",
+    "如果要构造不知道具体循环次数的循环结构，我们推荐使用while循环。while循环通过一个能够产生或转换出bool值的表达式来控制循环，表达式的值为True则继续循环；表达式的值为False则结束循环。"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "bigger\n",
+      "bigger\n",
+      "bigger\n",
+      "bigger\n",
+      "congrant\n",
+      "你共猜了5次\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 猜数字游戏\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "answer = random.randint(1,100)\n",
+    "conter = 0\n",
+    "while True:\n",
+    "    conter +=1\n",
+    "    number = int(input(\"请输入： \"))\n",
+    "\n",
+    "    if number < answer:\n",
+    "        print('bigger')\n",
+    "    elif number > answer:\n",
+    "        print('smaller')\n",
+    "    else:\n",
+    "        print('congrant')\n",
+    "        break\n",
+    "print('你共猜了%d次'  % conter)\n",
+    "if conter > 7:\n",
+    "    print(\"你的智商余额不足\")   "
+   ]
   }
  ]
 }
