--- a/01-Python语言基础/在线运行版本/练习版本.ipynb
+++ b/01-Python语言基础/在线运行版本/练习版本.ipynb
@@ -10,15 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.4"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "display_name": "Python 3.7.4 64-bit ('base': conda)"
   },
   "interpreter": {
-   "hash": "7b4b4feff2f24a0f0a34464dbe537a36fda679851528fb8735cb41fa49dffb2d"
+   "hash": "de405cc2d6952fd2aff521f44f09a5bf02d9820dbe7a14f58a05798f4b173db7"
   }
  },
  "nbformat": 4,
@@ -86,11 +86,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "a = 321\r\n",
-    "b = 12\r\n",
-    "print(a+b)\r\n",
-    "print(a-b)\r\n",
-    "print(a*b)\r\n",
+    "a = 321\n",
+    "b = 12\n",
+    "print(a+b)\n",
+    "print(a-b)\n",
+    "print(a*b)\n",
     "print(a/b)"
    ],
    "outputs": [
@@ -111,17 +111,17 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "# 使用type()检查变量类型\r\n",
-    "\r\n",
-    "a = 100\r\n",
-    "b = 12.345\r\n",
-    "c = 1 + 5j\r\n",
-    "d = \"hello world\"\r\n",
-    "e = True\r\n",
-    "print(type(a))\r\n",
-    "print(type(b))\r\n",
-    "print(type(c))\r\n",
-    "print(type(d))\r\n",
+    "# 使用type()检查变量类型\n",
+    "\n",
+    "a = 100\n",
+    "b = 12.345\n",
+    "c = 1 + 5j\n",
+    "d = \"hello world\"\n",
+    "e = True\n",
+    "print(type(a))\n",
+    "print(type(b))\n",
+    "print(type(c))\n",
+    "print(type(d))\n",
     "print(type(e))"
    ],
    "outputs": [
@@ -143,22 +143,22 @@
    "cell_type": "code",
    "execution_count": 7,
    "source": [
-    "\"\"\"\r\n",
-    "使用input()函数获取键盘输入(字符串)\r\n",
-    "使用int()函数将输入的字符串转换成整数\r\n",
-    "使用print()函数输出带占位符的字符串\r\n",
-    "\r\n",
-    "Version: 0.1\r\n",
-    "Author: 骆昊\r\n",
-    "\"\"\"\r\n",
-    "a = int(input('a = '))\r\n",
-    "b = int(input('b = '))\r\n",
-    "print('%d + %d = %d' % (a, b, a + b))\r\n",
-    "print('%d - %d = %d' % (a, b, a - b))\r\n",
-    "print('%d * %d = %d' % (a, b, a * b))\r\n",
-    "print('%d / %d = %f' % (a, b, a / b))\r\n",
-    "print('%d // %d = %d' % (a, b, a // b))\r\n",
-    "print('%d %% %d = %d' % (a, b, a % b))\r\n",
+    "\"\"\"\n",
+    "使用input()函数获取键盘输入(字符串)\n",
+    "使用int()函数将输入的字符串转换成整数\n",
+    "使用print()函数输出带占位符的字符串\n",
+    "\n",
+    "Version: 0.1\n",
+    "Author: 骆昊\n",
+    "\"\"\"\n",
+    "a = int(input('a = '))\n",
+    "b = int(input('b = '))\n",
+    "print('%d + %d = %d' % (a, b, a + b))\n",
+    "print('%d - %d = %d' % (a, b, a - b))\n",
+    "print('%d * %d = %d' % (a, b, a * b))\n",
+    "print('%d / %d = %f' % (a, b, a / b))\n",
+    "print('%d // %d = %d' % (a, b, a // b))\n",
+    "print('%d %% %d = %d' % (a, b, a % b))\n",
     "print('%d ** %d = %d' % (a, b, a ** b))"
    ],
    "outputs": [
@@ -189,16 +189,16 @@
    "cell_type": "code",
    "execution_count": 8,
    "source": [
-    "\"\"\"\r\n",
-    "赋值运算符和复合赋值运算符\r\n",
-    "\r\n",
-    "Version: 0.1\r\n",
-    "Author: 骆昊\r\n",
-    "\"\"\"\r\n",
-    "a = 10\r\n",
-    "b = 3\r\n",
-    "a += b        # 相当于：a = a + b\r\n",
-    "a *= a + 2    # 相当于：a = a * (a + 2)\r\n",
+    "\"\"\"\n",
+    "赋值运算符和复合赋值运算符\n",
+    "\n",
+    "Version: 0.1\n",
+    "Author: 骆昊\n",
+    "\"\"\"\n",
+    "a = 10\n",
+    "b = 3\n",
+    "a += b        # 相当于：a = a + b\n",
+    "a *= a + 2    # 相当于：a = a * (a + 2)\n",
     "print(a)      # 算一下这里会输出什么"
    ],
    "outputs": [
@@ -216,23 +216,23 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "\"\"\"\r\n",
-    "比较运算符和逻辑运算符的使用\r\n",
-    "\r\n",
-    "Version: 0.1\r\n",
-    "Author: 骆昊\r\n",
-    "\"\"\"\r\n",
-    "flag0 = 1 == 1\r\n",
-    "flag1 = 3 > 2\r\n",
-    "flag2 = 2 < 1\r\n",
-    "flag3 = flag1 and flag2\r\n",
-    "flag4 = flag1 or flag2\r\n",
-    "flag5 = not (1 != 2)\r\n",
-    "print('flag0 =', flag0)    # flag0 = True\r\n",
-    "print('flag1 =', flag1)    # flag1 = True\r\n",
-    "print('flag2 =', flag2)    # flag2 = False\r\n",
-    "print('flag3 =', flag3)    # flag3 = False\r\n",
-    "print('flag4 =', flag4)    # flag4 = True\r\n",
+    "\"\"\"\n",
+    "比较运算符和逻辑运算符的使用\n",
+    "\n",
+    "Version: 0.1\n",
+    "Author: 骆昊\n",
+    "\"\"\"\n",
+    "flag0 = 1 == 1\n",
+    "flag1 = 3 > 2\n",
+    "flag2 = 2 < 1\n",
+    "flag3 = flag1 and flag2\n",
+    "flag4 = flag1 or flag2\n",
+    "flag5 = not (1 != 2)\n",
+    "print('flag0 =', flag0)    # flag0 = True\n",
+    "print('flag1 =', flag1)    # flag1 = True\n",
+    "print('flag2 =', flag2)    # flag2 = False\n",
+    "print('flag3 =', flag3)    # flag3 = False\n",
+    "print('flag4 =', flag4)    # flag4 = True\n",
     "print('flag5 =', flag5)    # flag5 = False"
    ],
    "outputs": [
@@ -262,9 +262,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "source": [
-    "f = float(input('请输入华氏温度： '))\r\n",
-    "c = (f -32) / 1.8\r\n",
-    "print('%.1f 华氏度 = %.1f摄氏度' % (f,c))\r\n"
+    "f = float(input('请输入华氏温度： '))\n",
+    "c = (f -32) / 1.8\n",
+    "print('%.1f 华氏度 = %.1f摄氏度' % (f,c))\n"
    ],
    "outputs": [
     {
@@ -295,11 +295,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "source": [
-    "# 计算半径计算圆的周长和面积\r\n",
-    "radius = float(input(\"请输入圆的半径： \"))\r\n",
-    "perimeter = 2 * 3.1416 *radius\r\n",
-    "area = 3.1416 * radius * radius\r\n",
-    "print(\"周长：%.2f\" % perimeter)\r\n",
+    "# 计算半径计算圆的周长和面积\n",
+    "radius = float(input(\"请输入圆的半径： \"))\n",
+    "perimeter = 2 * 3.1416 *radius\n",
+    "area = 3.1416 * radius * radius\n",
+    "print(\"周长：%.2f\" % perimeter)\n",
     "print(\"面积: %.2f\" % area)"
    ],
    "outputs": [
@@ -325,10 +325,10 @@
    "cell_type": "code",
    "execution_count": 22,
    "source": [
-    "# 输入年份，如果是闰年输入True，否则输入false\r\n",
-    "\r\n",
-    "year = int(input(\"请输入年份： \"))\r\n",
-    "is_leap = year % 4 == 0 and year % 100 != 0 or year % 400 ==0\r\n",
+    "# 输入年份，如果是闰年输入True，否则输入false\n",
+    "\n",
+    "year = int(input(\"请输入年份： \"))\n",
+    "is_leap = year % 4 == 0 and year % 100 != 0 or year % 400 ==0\n",
     "print(is_leap)"
    ],
    "outputs": [
@@ -360,17 +360,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "# 英制单位英寸和公职单位厘米互换\r\n",
-    "\r\n",
-    "value = float(input(\"请输入长度 ：\"))\r\n",
-    "unit = input('请输入单位： ')\r\n",
-    "\r\n",
-    "if unit == 'in' or unit == '英寸':\r\n",
-    "    print('%f英寸 = %f厘米' % (value,value * 2.54))\r\n",
-    "elif unit == 'cm' or unit == '厘米' :\r\n",
-    "    print('%f厘米 = %f英寸' % (value,value / 2.54))\r\n",
-    "else:\r\n",
-    "    print(\"请输入有效单位\")\r\n"
+    "# 英制单位英寸和公职单位厘米互换\n",
+    "\n",
+    "value = float(input(\"请输入长度 ：\"))\n",
+    "unit = input('请输入单位： ')\n",
+    "\n",
+    "if unit == 'in' or unit == '英寸':\n",
+    "    print('%f英寸 = %f厘米' % (value,value * 2.54))\n",
+    "elif unit == 'cm' or unit == '厘米' :\n",
+    "    print('%f厘米 = %f英寸' % (value,value / 2.54))\n",
+    "else:\n",
+    "    print(\"请输入有效单位\")\n"
    ],
    "outputs": [
     {
@@ -394,20 +394,20 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "# 百分制分等级\r\n",
-    "\r\n",
-    "score = float(input(\"请输入您的成绩： \"))\r\n",
-    "\r\n",
-    "if score >= 90 :\r\n",
-    "    grade = \"A\"\r\n",
-    "elif score >=80 :\r\n",
-    "    grade = \"B\"\r\n",
-    "elif score >= 70 :\r\n",
-    "    grade = \"C\"\r\n",
-    "elif score >= 60:\r\n",
-    "    grade = \"D\"\r\n",
-    "else:\r\n",
-    "    grade = \"E\"\r\n",
+    "# 百分制分等级\n",
+    "\n",
+    "score = float(input(\"请输入您的成绩： \"))\n",
+    "\n",
+    "if score >= 90 :\n",
+    "    grade = \"A\"\n",
+    "elif score >=80 :\n",
+    "    grade = \"B\"\n",
+    "elif score >= 70 :\n",
+    "    grade = \"C\"\n",
+    "elif score >= 60:\n",
+    "    grade = \"D\"\n",
+    "else:\n",
+    "    grade = \"E\"\n",
     "print(\"对应的等级是 ： \",grade)"
    ],
    "outputs": [
@@ -432,19 +432,19 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "# 判断输入的边长能否构成三角形，如果能则计算出三角形的周长和面积\r\n",
-    "\r\n",
-    "a = float(input('a = '))\r\n",
-    "b = float(input('b = '))\r\n",
-    "c = float(input('c = '))\r\n",
-    "if a + b > c and a + c > b and b + c > a:\r\n",
-    "    print('周长: %f' % (a + b + c))\r\n",
-    "    p = (a + b + c) / 2\r\n",
-    "    area = (p * (p - a) * (p - b) * (p - c)) ** 0.5\r\n",
-    "    print('面积: %f' % (area))\r\n",
-    "else:\r\n",
-    "    print('不能构成三角形')\r\n",
-    "\r\n",
+    "# 判断输入的边长能否构成三角形，如果能则计算出三角形的周长和面积\n",
+    "\n",
+    "a = float(input('a = '))\n",
+    "b = float(input('b = '))\n",
+    "c = float(input('c = '))\n",
+    "if a + b > c and a + c > b and b + c > a:\n",
+    "    print('周长: %f' % (a + b + c))\n",
+    "    p = (a + b + c) / 2\n",
+    "    area = (p * (p - a) * (p - b) * (p - c)) ** 0.5\n",
+    "    print('面积: %f' % (area))\n",
+    "else:\n",
+    "    print('不能构成三角形')\n",
+    "\n",
     "# 说明： 上面使用的通过边长计算三角形面积的公式叫做海伦公式。"
    ],
    "outputs": [
@@ -469,11 +469,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "# 用for循环实现1~100求和\r\n",
-    "\r\n",
-    "sum = 0\r\n",
-    "for x in range(101):\r\n",
-    "    sum += x\r\n",
+    "# 用for循环实现1~100求和\n",
+    "\n",
+    "sum = 0\n",
+    "for x in range(101):\n",
+    "    sum += x\n",
     "print(sum)"
    ],
    "outputs": [
@@ -511,25 +511,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "# 猜数字游戏\r\n",
-    "\r\n",
-    "import random\r\n",
-    "\r\n",
-    "answer = random.randint(1,100)\r\n",
-    "conter = 0\r\n",
-    "while True:\r\n",
-    "    conter +=1\r\n",
-    "    number = int(input(\"请输入： \"))\r\n",
-    "\r\n",
-    "    if number < answer:\r\n",
-    "        print('bigger')\r\n",
-    "    elif number > answer:\r\n",
-    "        print('smaller')\r\n",
-    "    else:\r\n",
-    "        print('congrant')\r\n",
-    "        break\r\n",
-    "print('你共猜了%d次'  % conter)\r\n",
-    "if conter > 7:\r\n",
+    "# 猜数字游戏\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "answer = random.randint(1,100)\n",
+    "conter = 0\n",
+    "while True:\n",
+    "    conter +=1\n",
+    "    number = int(input(\"请输入： \"))\n",
+    "\n",
+    "    if number < answer:\n",
+    "        print('bigger')\n",
+    "    elif number > answer:\n",
+    "        print('smaller')\n",
+    "    else:\n",
+    "        print('congrant')\n",
+    "        break\n",
+    "print('你共猜了%d次'  % conter)\n",
+    "if conter > 7:\n",
     "    print(\"你的智商余额不足\")   "
    ],
    "outputs": [
@@ -551,11 +551,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "# 用循环语句输出乘法表\r\n",
-    "\r\n",
-    "for i in range(1, 10):\r\n",
-    "    for j in range(1, i + 1):\r\n",
-    "        print('%d*%d=%d' % (i, j, i * j), end='\\t')\r\n",
+    "# 用循环语句输出乘法表\n",
+    "\n",
+    "for i in range(1, 10):\n",
+    "    for j in range(1, i + 1):\n",
+    "        print('%d*%d=%d' % (i, j, i * j), end='\\t')\n",
     "    print()"
    ],
    "outputs": [
@@ -575,6 +575,62 @@
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 06 函数和模块的使用"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
+    "from random import randint\n",
+    "\n",
+    "def roll_dice(n=2):\n",
+    "    \"\"\"摇骰子\"\"\"\n",
+    "    total = 0\n",
+    "    for _ in range(n):\n",
+    "        total += randint(1,6)\n",
+    "    return total\n",
+    "\n",
+    "def add(a=0,b=0,c=0):\n",
+    "    \"\"\"三个数相加\"\"\"\n",
+    "    return a + b + c\n",
+    "\n",
+    "# 如果没有指定参数那么使用默认值摇两颗色子\n",
+    "print(roll_dice())\n",
+    "# 摇三颗色子\n",
+    "print(add())\n",
+    "print(add(1))\n",
+    "print(add(1,2))\n",
+    "print(add(1,2,3))\n",
+    "\n",
+    "# 传递参数时可以不按照设定的顺序传递\n",
+    "print(add(c=50,a=100,b=200))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5\n",
+      "0\n",
+      "1\n",
+      "3\n",
+      "6\n",
+      "350\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {}
   }
  ]
