增加收集的packages

--- a/01-Python语言基础/在线运行版本/练习版本.ipynb
+++ b/01-Python语言基础/在线运行版本/练习版本.ipynb
@@ -630,7 +630,94 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "### 可变参数"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "source": [
+    "# 在参数名前面的*表示args是一个可变参数\n",
+    "\n",
+    "def add(*args):\n",
+    "    total = 0\n",
+    "    for val in args:\n",
+    "        total += val\n",
+    "    return total\n",
+    "\n",
+    "print(add())\n",
+    "print(add(1))\n",
+    "print(add(1, 2))\n",
+    "print(add(1, 2, 3))\n",
+    "print(add(1, 3, 5, 7, 9))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0\n",
+      "1\n",
+      "3\n",
+      "6\n",
+      "25\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 用模块管理函数\n",
+    "\n",
+    "* 对于任何一种编程语言来说，给变量、函数这样的标识符起名字都是一个让人头疼的问题，因为我们会遇到命名冲突这种尴尬的情况。最简单的场景就是在同一个.py文件中定义了两个同名函数，由于Python没有函数重载的概念，那么后面的定义会覆盖之前的定义，也就意味着两个函数同名函数实际上只有一个是存在的。\n",
+    "\n",
+    "* 当然上面的这种情况我们很容易就能避免，但是如果项目是由多人协作进行团队开发的时候，团队中可能有多个程序员都定义了名为foo的函数，那么怎么解决这种命名冲突呢？答案其实很简单，Python中每个文件就代表了一个模块（module），我们在不同的模块中可以有同名的函数\n",
+    "\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 另外 Python查找一个变量时会按照“局部作用域”、“嵌套作用域”、“全局作用域”和“内置作用域”的顺序进行搜索"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "def foo():\n",
+    "    a = 200\n",
+    "    print(a)  # 200\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    a = 100\n",
+    "    foo()\n",
+    "    print(a)  # 100"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "200\n",
+      "100\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ]
