学习07-字符串

--- a/01-Python语言基础/在线运行版本/练习版本.ipynb
+++ b/01-Python语言基础/在线运行版本/练习版本.ipynb
@@ -719,6 +719,174 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 07 字符串和常用数据结构\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "source": [
+    "s1 = 'hello' * 3\n",
+    "print(s1)\n",
+    "s2 = 'world'\n",
+    "s1 +=s2\n",
+    "print(s1,end=' ')\n",
+    "print('ll' in s1)\n",
+    "print('good' in s1)\n",
+    "\n",
+    "str2 = 'abc123456'\n",
+    "print(str2[2:5])\n",
+    "print(str2[2:])\n",
+    "print(str2[2::2])\n",
+    "print(str2[::2])\n",
+    "print(str2[::-1])\n",
+    "print(str2[-3:-1])"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "hellohellohello\n",
+      "hellohellohelloworld True\n",
+      "False\n",
+      "c12\n",
+      "c123456\n",
+      "c246\n",
+      "ac246\n",
+      "654321cba\n",
+      "45\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Python 中，我们还可以通过一系列的方法来完成对字符串的处理，代码如下："
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "source": [
+    "str1= 'hello,world!'\n",
+    "# 通过内置函数len计算字符串的长度\n",
+    "print(len(str1))\n",
+    "# 通过字符串首个字母大写的拷贝\n",
+    "print(str1.capitalize())\n",
+    "# 通过字符串每个单次首字母变大写后的拷贝\n",
+    "print(str1.title())\n",
+    "# 通过字符串变大写后的拷贝\n",
+    "print(str1.upper())\n",
+    "# 从字符串中查找子串所在的位置\n",
+    "print(str1.find('or'))\n",
+    "print(str1.find('shit'))\n",
+    "\n",
+    "# 检查字符串是否以制定的字符串开头\n",
+    "print(str1.startswith('He'))\n",
+    "print(str1.startswith('hel'))\n",
+    "\n",
+    "# 检查字符串以指定的字符串结尾\n",
+    "print(str1.endswith('!'))\n",
+    "# 将字符串以制定的宽度居中并在两侧填充制定的字符\n",
+    "print(str1.center(50,'*'))\n",
+    "\n",
+    "str2 = 'abc123456'\n",
+    "# 检查字符串是否由数字构成\n",
+    "print(str2.isdigit())\n",
+    "# 检查字符串是否由字幕构成\n",
+    "print(str2.isalpha())\n",
+    "\n",
+    "# 检查字符串是否由字母和数字构成\n",
+    "print(str2.isalnum())\n",
+    "\n",
+    "str3 = '    jackfrued@126.com   '\n",
+    "print(str3)\n",
+    "# 获得字符串修建左右两侧空格之后的拷贝\n",
+    "print(str3.strip())"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "12\n",
+      "Hello,world!\n",
+      "Hello,World!\n",
+      "HELLO,WORLD!\n",
+      "7\n",
+      "-1\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "*******************hello,world!*******************\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "    jackfrued@126.com   \n",
+      "jackfrued@126.com\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 格式化输出字符串"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "source": [
+    "a,b = 5,10\n",
+    "print('%d * %d = %d' % (a,b,a*b))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5 * 10 = 50\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "source": [
+    "a,b = 5,10\n",
+    "print(f'{a}*{b} = {a*b}')"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5*10 = 50\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ]
 }
