--- a/01-Python语言基础/在线运行版本/练习版本.ipynb
+++ b/01-Python语言基础/在线运行版本/练习版本.ipynb
@@ -887,6 +887,96 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 使用列表"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "list1 = [1,3,5,7,100]\n",
+    "print(list1)\n",
+    "# 乘号表示列表元素的重复\n",
+    "list2 = ['hello']*3\n",
+    "print(list2)\n",
+    "# 计算列表的长度\n",
+    "print(len(list1))\n",
+    "print(len(list2))\n",
+    "\n",
+    "# 下标索引运算\n",
+    "print(list1[0])\n",
+    "print(list1[4])\n",
+    "print(list1[-1])\n",
+    "print(list1[-3])\n",
+    "\n",
+    "list1[2] = 300\n",
+    "print(list1)\n",
+    "\n",
+    "# 通过循环用下标遍历列表元素\n",
+    "for index in range(len(list1)):\n",
+    "    print(list1[index])\n",
+    "\n",
+    "# 通过for循环遍历列表元素\n",
+    "\n",
+    "for elem in list1:\n",
+    "    print(elem)\n",
+    "\n",
+    "# 通过enumerate函数处理列表之后再遍历可以同时获得元素索引和值\n",
+    "for index,elem in enumerate(list1):\n",
+    "    print(index,elem)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 3, 5, 7, 100]\n",
+      "['hello', 'hello', 'hello']\n",
+      "5\n",
+      "3\n",
+      "1\n",
+      "100\n",
+      "100\n",
+      "5\n",
+      "[1, 3, 300, 7, 100]\n",
+      "1\n",
+      "3\n",
+      "300\n",
+      "7\n",
+      "100\n",
+      "1\n",
+      "3\n",
+      "300\n",
+      "7\n",
+      "100\n",
+      "0 1\n",
+      "1 3\n",
+      "2 300\n",
+      "3 7\n",
+      "4 100\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 下面的代码演示了如何向列表中添加元素以及如何从列表中移除元素"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
   }
  ]
 }
